--- a/scss/main.scss
+++ b/scss/main.scss
@@ -568,7 +568,7 @@ body {
     font-family: $font-main;
     text-align: center;
     vertical-align: middle;
-    border: 1px solid #cecece;
+    border: 2px solid #cecece;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 20px;
     color: $text-color_main;
@@ -684,16 +684,6 @@ body {
     }
 }
 
-// .wrapper_ {
-//     margin: 0 0 0 0;
-//     padding: 0 0 0 0;
-//     // display: block;
-//     // position: absolute;
-//     // top: 50%;
-//     // left: 50%;
-//     transform: translate(-50%, -50%);
-//     border: 1px solid red;
-// }
 .button-check {
     padding: 0.75em 2em;
     text-align: center;
@@ -708,7 +698,6 @@ body {
     overflow: hidden;
     background-color: #0c70b3;
     outline: none;
-    // outline: none;
     &:before {
         content: "";
         background-color: rgba(255, 255, 255, 0.5);
@@ -735,6 +724,20 @@ body {
     &:active {
         outline: none;
     }
+}
+
+.button-check_disabled {
+    padding: 0.75em 2em;
+    text-align: center;
+    text-decoration: none;
+    color: $bgcolor-second;
+    border: 2px solid $bgcolor-second;
+    font-size: 24px;
+    display: inline-block;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: $text-color_grey;
+    outline: none;
 }
 
 .facts {
@@ -768,7 +771,7 @@ body {
     padding: 40px 12px;
     box-sizing: border-box;
     background-color: $bgcolor-footer;
-    height: 220px;
+    height: 320px;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
@@ -780,6 +783,20 @@ body {
     color: $text-color_white;
     &:first-child {
         width: 20%;
+    }
+}
+
+.footer-quote {
+    position: relative;
+    &::before {
+        content: '–';
+        position: absolute;
+        top: -10px;
+        left: -25px;
+        font-size: 30px;
+        font-weight: 400;
+        font-family: $font-main;
+        color: $text-color_grey;
     }
 }
 
@@ -797,7 +814,7 @@ body {
 }
 
 .text__footer {
-    margin: 0 0 0 0;
+    margin: 0 0 15px 0;
     padding: 0 0 0 0;
     font-family: $font-main;
     font-size: 16px;
@@ -865,13 +882,13 @@ body {
     }
 }
 
-.textarea {
+.footer-input {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
     padding-left: 20px;
     outline: none;
-    height: 85px;
+    height: 45px;
     width: 400px;
     background-color: #a1a1a1;
     color: #f5f5f5;
@@ -882,93 +899,35 @@ body {
     box-sizing: border-box;
 }
 
-//-------------
-//======= plan b ========
-.plan-b-style {
-    width: 100%;
-    height: 54px;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    background-color: $bgcolor-footer;
-}
-
-.dev-planb {
-    margin: 0 40px 0 0;
-    padding: 0 0 0 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 11px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.plan-b {
-    margin: 0 0 0 0;
-    padding: 0 2px 0 0;
-    background-color: #646464;
-    color: white;
-    width: 84px;
-    height: 40px;
-    display: flex;
-    justify-content: flex-end;
-    opacity: 0.5;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
+.textarea {
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding-left: 20px;
+    outline: none;
+    height: 100px;
+    width: 400px;
+    background-color: #a1a1a1;
+    color: #f5f5f5;
+    border: 1px solid #a1a1a1;
     font-size: 20px;
+    line-height: 22px;
+    margin: 5px 0 5px 0;
+    box-sizing: border-box;
 }
 
-.plan-b:hover {
-    opacity: 1;
-    transition: 0.5s;
-}
-
-.planb_p,
-.planb_l,
-.planb_a,
-.planb_n,
-.planb_b {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    display: block;
-}
-
-.planb_p {
-    font-weight: 100;
-}
-
-.planb_l {
-    font-weight: 300;
-}
-
-.planb_a {
-    font-weight: 400;
-}
-
-.planb_n {
-    font-weight: 500;
-}
-
-.planb_b {
-    font-weight: 700;
-}
-
-.restart-game {
-    &:hover {
-        cursor: pointer;
+.dynamic-text {
+    position: relative;
+    &::before {
+        content: 'Наведи курсор на цифры, будет легче отгадывать';
+        font-size: 14px;
+        width: 99px;
+        top: 0px;
+        left: -170px;
+        color: $text-color_main;
+        font-family: $font-main;
+        font-weight: 400;
+        font-style: italic;
+        position: absolute;
     }
-}
-
-.number__0,
-.number__1,
-.number__2,
-.number__3,
-.number__4,
-.number__5,
-.number__6,
-.number__7,
-.number__8,
-.number__9 {
-    margin: 0 0 0 0;
-    padding: 0 3px;
 }
