--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,17 @@ body {
       transition: all 0.5s ease-in-out; }
   .button-check:active {
     outline: none; }
+  .button-check::after {
+    content: "Ошибка ввода";
+    width: 200px;
+    height: 40px;
+    position: absolute;
+    left: -300px;
+    top: -20px;
+    font-family: "Roboto";
+    font-size: 15px;
+    color: #000;
+    z-index: 1000; }
 
 .button-check_disabled {
   padding: 0.75em 2em;
