--- a/css/main.css
+++ b/css/main.css
@@ -791,8 +791,9 @@ body {
   background-color: #a1a1a1;
   color: #f5f5f5;
   border: 1px solid #a1a1a1;
-  font-size: 20px;
-  line-height: 22px;
+  font-family: "Roboto";
+  font-size: 17px;
+  line-height: 20px;
   margin: 5px 0 5px 0;
   box-sizing: border-box; }
 
@@ -807,8 +808,9 @@ body {
   background-color: #a1a1a1;
   color: #f5f5f5;
   border: 1px solid #a1a1a1;
-  font-size: 20px;
-  line-height: 22px;
+  font-family: "Roboto";
+  font-size: 17px;
+  line-height: 20px;
   margin: 5px 0 5px 0;
   box-sizing: border-box; }
 
