--- a/scss/main.scss
+++ b/scss/main.scss
@@ -918,8 +918,9 @@ body {
     background-color: #a1a1a1;
     color: #f5f5f5;
     border: 1px solid #a1a1a1;
-    font-size: 20px;
-    line-height: 22px;
+    font-family: $font-main;
+    font-size: 17px;
+    line-height: 20px;
     margin: 5px 0 5px 0;
     box-sizing: border-box;
 }
@@ -935,8 +936,9 @@ body {
     background-color: #a1a1a1;
     color: #f5f5f5;
     border: 1px solid #a1a1a1;
-    font-size: 20px;
-    line-height: 22px;
+    font-family: $font-main;
+    font-size: 17px;
+    line-height: 20px;
     margin: 5px 0 5px 0;
     box-sizing: border-box;
 }
