Изменения: отправка из футтера, отправка из модального окна (когда положены деньги), единый метод для получания текущей даты и времени, скорректировал ещё некоторый текст, упорядочил; написал комментарии в js, что делает каждый метод

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -961,11 +961,11 @@ body {
 }
 
 .next-fact_link {
-    color: $text-color_main;
+    color: $color;
     text-decoration: underline;
     &:hover {
         cursor: pointer;
-        color: $text-color_grey;
+        color: $text-color_main;
         text-decoration: none;
     }
 }
