--- a/css/main.css
+++ b/css/main.css
@@ -830,9 +830,9 @@ body {
     position: absolute; }
 
 .next-fact_link {
-  color: #000;
+  color: #2194E0;
   text-decoration: underline; }
   .next-fact_link:hover {
     cursor: pointer;
-    color: #757373;
+    color: #000;
     text-decoration: none; }
