Тест 3–х модальных окон

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -176,6 +176,11 @@ body {
     justify-content: flex-start;
 }
 
+.modal-footer_margin {
+    margin: 50px 0 0 0;
+    padding: 0 0 0 0;
+}
+
 .footer-text {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
