--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,10 @@ body {
   flex-direction: column;
   justify-content: flex-start; }
 
+.modal-footer_margin {
+  margin: 50px 0 0 0;
+  padding: 0 0 0 0; }
+
 .footer-text {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
