--- a/scss/main.scss
+++ b/scss/main.scss
@@ -974,3 +974,32 @@ body {
         text-decoration: none;
     }
 }
+
+@media screen and (max-width: 1400px) {
+    .footer-style {
+        display: none;
+    }
+    .main-style {
+        display: none;
+    }
+    .header-style {
+        display: none;
+    }
+    .container {
+        background-color: $bgcolor-main;
+        width: 80%;
+        height: 100vh;
+        margin: 0 auto;
+        &::before {
+            content: 'Сейчас игра доступна только на компьютере или ноутбуке с разрешением не меньше 1400px';
+            display: flex;
+            justify-content: center;
+            margin: 40% auto;
+            width: 300px;
+            font-size: 22px;
+            line-height: 30px;
+            font-family: $font-main;
+            color: $text-color_main;
+        }
+    }
+}
